<resources>
    <string name="app_name">BeesInernatinal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BEES International Trade Inc.</string>
    <string name="nav_header_subtitle">admin@beesinternational.ca</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="company_name">BEES International</string>
    <string name="menu_category">Product Category</string>
    <string name="menu_product">Product Information</string>
    <string name="menu_exchange">Exchange Rates</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_contact">Contact</string>
    <string name="text_welcome">Contact Information</string>
    <string name="text_call_title">General Contact:</string>
    <string name="text_call_number">+1 519-999-1111</string>
    <string name="text_sales_title">Contact Sales:</string>
    <string name="text_sales_number">+1 519-999-1112</string>
    <string name="text_accounting_title">Contact Accounting:</string>
    <string name="text_accounting_number">+1 519-999-1113</string>
    <string name="text_sms_title">WhatsApp:</string>
    <string name="text_sms_number">+1 519-999-2222</string>
    <string name="text_fax_title">Fax:</string>
    <string name="text_fax_number">519-999-3333</string>
    <string name="text_email_title">Email:</string>
    <string name="text_email_address">admin@beesinternational.ca</string>
    <string name="title_address">Address:</string>
    <string name="title_socialMedia">Social Medias:</string>
    <string name="contact_address">277 Riverside Dr W, Windsor, ON N9A 5K4</string>
    <string name="text_ask_dealer">Ask Dealer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="category_title">Category</string>
    <string name="category_count">Items</string>
    <string-array name="categories_name">
        <item>Hand Tools</item>
        <item>Outdoor Tools</item>
        <item>Painting Tools</item>
        <item>Power Tools</item>
        <item>Garden Tools</item>
        <item>WoodWorking Tools</item>
        <item>Air Tools</item>
    </string-array>
    <string-array name="products_name">
        
        <item>Face Hammer</item>
        <item>Ratcheting Wrench Set</item>
        <item>Adjustable Wrench Set</item>
        <item>Screwdriver</item>
        <item>Compound Pliers</item>
        
        <item>Hole Digger</item>
        <item>D-Grip Shovel</item>
        <item>Square Shovel</item>
        
        <item>Tray</item>
        <item>Angle Brush</item>
        <item>Roller Cover</item>
        
        <item>Hammer Drill</item>
        <item>Compact Drill</item>
        
        <item>Bypass Prune</item>
        
        <item>Circular Saw</item>
        
        <item>Spray Gun</item>
    </string-array>
    <string-array name="products_description">
        
        <item>
            - Optimal weight distribution for a controlled swing\n
            - Oval shaped strike face makes toe-nailing easy\n
            - Side nail puller for efficient nail pulling\n
            - Magnetic nail starter for easy 1-handed nail placement\n
            - Rip claw\n
            - 22 oz.\n
            - Framing hammer
        </item>
        <item>
            - Box end needs just 3.6-degree swing to turn a fastener\n
            - Open end also ratchets to quickly remove fasteners where box ends cannot reach\n
            - Alloy steel construction provides durability and long-lasting performance
        </item>
        <item>
            - Double-speed open/close adjustment allows you to work more efficiently\n
            - Laser etched scale for quick and easy size adjustment\n
            - Shark fin design, heavy duty, carbon steel\n
            - Chrome-plated, half polish, no grip
        </item>
        <item>
            - Internal bit storage holds up to 12 bits\n
            - Heavy-duty ratchet mechanism for high torque applications\n
            - Removable bar can also be used in power drills\n
            - Handle will also take regular bit for use in confined space
        </item>
        <item>
            - Supplies significantly more cutting and gripping power over standard pliers\n
            - Outfitted with bi-material handles for strong grip and comfort\n
            - Fashioned with an aggressive crosshatch tooth design for enhanced gripping\n
            - Constructed with chrome vanadium steel for strength and durability
        </item>

        
        <item>
            - 4.75, x 9 steel blade\n
            - 54 long with wooden handle\n
            - Digs 5.5 holes\n
            - Hardwood Handle\n
            - lightweight and easy to use\n
        </item>
        <item>
            - Heavy duty tempered steel blade\n
            - Extra-wide foot steps for more power and security\n
            - Sturdy comfortable handle with D-grip made of engineered materials\n
            - Industrial grade tool for landscaping and construction professionals
        </item>
        <item>
            - Heavy duty tempered steel blade\n
            - Extra-wide foot steps for more power and security\n
            - Sturdy comfortable handle with D-grip made of engineered materials\n
            - Industrial grade tool for landscaping and construction professionals
        </item>
        
        <item>
            - Keeps paint off of carpet wall, ceilings, trim and windows\n
            - 2 inch wide guard\n
            - Secure, riveted handle
        </item>
        <item>
            - Handcrafted\n
            - Easy clean up\n
            - Interior and Exterior\n
            - For all paints and stains\n
            - Reusable
        </item>
        <item>
            - Heavy duty moisture and solvent resistant core\n
            - Recommend for use with flat, eggshell and satin paints\n
            - Shed-free, knit fabric\n
            - Excellent durability and easy to clean for re-use
        </item>
        
        <item>
            The hammer drill provides a 360° locking auxiliary handle to allow for control and
            comfort in difficult drilling operations. The handle has a built-in depth gauge for
            drilling accuracy. The 1191VSRK has a variable-speed reversing trigger, which helps
            with accurate bit starting, as well as removing fasteners or bound bits.
        </item>
        <item>
            - Three-mode LED provides lighting in dark work environments up to 20X brighter than previous model\n
            - LED spotlight mode features 20-minute shutoff function allowing for extended work time in dark or confined spaces\n
            - Ergonomic comfort grip handle provides ideal balance and tool control\n
            - DEWALT brushless motor delivers up to 57% more run time over brushed\n
        </item>
        
        <item>
            - Softgrip<sup>®</sup> handles for comfort and control\n
            - Non-stick blade coating reduces friction to make cutting easier
        </item>
        
        <item>
            - Best in class cordless runtime delivers up to 339 cuts per charge in 2-inch x 4-inch SPF lumber\n
            - Depth of cut - best in class at 2-9/16-inch\n
            - Electronic brake - stops the blade after the trigger is released
        </item>
        
        <item>
            - Paint Nozzle: 1.7mm
            - Capacity-Volume: 32 Fl. Oz
            - Working air pressure: 50-70 PSI
            - 1/4inch NPT Air Inlet
            - Avg CFM: 6 CFM
        </item>
    </string-array>
    <string-array name="products_pricee">
        
        <item>29.99</item>
        <item>34.97</item>
        <item>8.97</item>
        <item>19.99</item>
        <item>38.99</item>
        
        <item>45.99</item>
        <item>18.99</item>
        <item>18.99</item>
        
        <item>0.99</item>
        <item>6.47</item>
        <item>10.18</item>
        
        <item>67.99</item>
        <item>189</item>
        
        <item>15.99</item>
        
        <item>229</item>
        
        <item>42.99</item>
    </string-array>
    <string-array name="currency_name">
        <item>USD</item>
        <item>CAD</item>
        <item>EUR</item>
        <item>INR</item>
        <item>AUD</item>
        <item>DKK</item>
        <item>TRY</item>
        <item>SGD</item>
        <item>MYR</item>
        <item>GBP</item>
        <item>CHF</item>
    </string-array>
    <string-array name="currency_country">
        <item>The USA</item>
        <item>Canada</item>
        <item>Europe</item>
        <item>India</item>
        <item>Australia</item>
        <item>Denmark</item>
        <item>Turkey</item>
        <item>Singapore</item>
        <item>Malaysia</item>
        <item>the United Kingdom</item>
        <item>Switzerland</item>
    </string-array>
    <string-array name="currency_rate">
        <item>1</item>
        <item>1.30870</item>
        <item>0.841482</item>
        <item>74.1327</item>
        <item>1.36811</item>
        <item>6.28373</item>
        <item>7.60603</item>
        <item>1.34359</item>
        <item>4.09213</item>
        <item>0.7529850</item>
        <item>0.904628</item>
    </string-array>
    <string-array name="currency_sign">
        <item>$</item>
        <item>$</item>
        <item>€</item>
        <item>₹</item>
        <item>$</item>
        <item>Kr</item>
        <item>₺</item>
        <item>$</item>
        <item>RM</item>
        <item>£</item>
        <item>Fr</item>
    </string-array>
    <string name="about_title">About:</string>
    <string name="about_text">
        We are involved in the tools business.\n
        We will directly provide high-quality tools to
        general distributors in various countries that we contracted.\n

        Simple, honest, ethical business.    </string>
    <string name="about_contries">Contracted Countries:</string>
    <string name="about_countries_title">Contracted Countries:</string>
    <string name="about_location_title">Primary location:</string>
    <string name="about_location_text">Ontario, Canada</string>
    <string name="about_creation_title">Date of creation:</string>
    <string name="about_creation_text">November, 2020</string>
    <string name="about_member_title">A member of:</string>
    <string name="about_member_text">Global Trade &amp; Commerce Association, Inc.</string>
    <string name="about_employee_title">Number of employees:</string>
    <string name="about_employee_text">1</string>
    <string name="flag">flag</string>
    <string name="send_email">Send Email</string>
    <string name="settings_currency"> Currency of Country</string>
    <string name="settings_animation">Animation</string>
    <string name="setting_text_size">Text Size</string>
    <string name="menu_credits">Credits</string>
    <string name="credit_icons_title">Icons</string>
    <string name="credit_flags_title">Flags</string>
    <string name="credit_images_title">Images</string>
    <string name="credit_icons_text">All Icons From <u>www.flaticon.com</u></string>
    <string name="credit_flags_text">Flags made by <i>Freepik</i> from <u>www.flaticon.com</u></string>
    <string name="credit_images_text">All Product Images from <u>www.pixabay.com</u></string>
    <string name="credit_transform_title">ViewPager Transform</string>
    <string name="credit_transform_text">
        Ian Thomas, \nI (2019) ViewPagerTransforms (2.0)\n
        SourceCode: <u>github.com/ToxicBakery/ViewPagerTransforms</u>
    </string>
    <string-array name="settings_text_size_keys">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>
</resources>