<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fragment.ContactFragment">

    <!-- TODO: Update blank fragment layout -->


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                android:src="@drawable/contact_us" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_call_title"
                android:textSize="@dimen/text_tile" />

            <TextView
                android:id="@+id/callTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_text"
                android:layout_marginEnd="@dimen/margin_text"
                android:text="@string/text_call_number"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/text_size" />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_sales_title"
                android:textSize="@dimen/text_tile" />

            <TextView
                android:id="@+id/salesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_text"
                android:layout_marginEnd="@dimen/margin_text"
                android:text="@string/text_sales_number"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/text_size" />
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_accounting_title"
                android:textSize="@dimen/text_tile" />

            <TextView
                android:id="@+id/accountingTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_text"
                android:layout_marginEnd="@dimen/margin_text"
                android:text="@string/text_accounting_number"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/text_size" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="30dp"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_sms_title"
                android:textSize="@dimen/text_tile" />

            <TextView
                android:id="@+id/smsTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_text"
                android:layout_marginEnd="@dimen/margin_text"
                android:text="@string/text_sms_number"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/text_size" />
            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="30dp"
                android:background="?android:attr/listDivider" />
            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_fax_title"
                android:textSize="@dimen/text_tile" />

            <TextView
                android:id="@+id/faxTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_text"
                android:layout_marginEnd="@dimen/margin_text"
                android:text="@string/text_fax_number"
                android:textSize="@dimen/text_size" />
            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="30dp"
                android:background="?android:attr/listDivider" />
            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_email_title"
                android:textSize="@dimen/text_tile" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_text"
                android:layout_marginEnd="@dimen/margin_text"
                android:text="@string/text_email_address"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/text_size" />
            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="30dp"
                android:background="?android:attr/listDivider" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_address"
                android:textSize="@dimen/text_tile" />

            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_text"
                android:layout_marginEnd="@dimen/margin_text"
                android:text="@string/contact_address"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="@dimen/text_size" />
            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="30dp"
                android:background="?android:attr/listDivider" />
            <Button
                android:id="@+id/dealerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_ask_dealer" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>