<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_category">
    <fragment
        android:id="@+id/nav_category"
        android:name="ibrahim.example.beesinernatinal.fragment.CategoryFragment"
        android:label="@string/menu_category"
        tools:layout="@layout/fragment_category" >
        <action
            android:id="@+id/action_nav_category_to_productFragment"
            app:destination="@id/productFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_exchange"
        android:name="ibrahim.example.beesinernatinal.fragment.ExchangeFragment"
        android:label="@string/menu_exchange"
        tools:layout="@layout/fragment_exchange" />
    <fragment
        android:id="@+id/nav_about"
        android:name="ibrahim.example.beesinernatinal.fragment.AboutFragment"
        android:label="@string/company_name"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_contact"
        android:name="ibrahim.example.beesinernatinal.fragment.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" >
        <action
            android:id="@+id/action_nav_contact_to_dealerFragment"
            app:destination="@id/dealerFragment" />
    </fragment>
    <fragment
        android:id="@+id/productFragment"
        android:name="ibrahim.example.beesinernatinal.fragment.ProductFragment"
        android:label="@string/menu_product"
        tools:layout="@layout/fragment_product" />
    <fragment
        android:id="@+id/dealerFragment"
        android:name="ibrahim.example.beesinernatinal.fragment.DealerFragment"
        android:label="Ask Dealer"
        tools:layout="@layout/fragment_dealer" />
</navigation>